# sugarcubes

./: .gitignore  Cargo.toml  README.md
docs/: index.html  plugin.js  sugarcubes.wasm
scripts/: wasm-bindgen-macroquad.sh
sugarcubes/: Cargo.toml
sugarcubes-core/: Cargo.toml
sugarcubes-core/examples/: finite_automaton.rs
sugarcubes-core/src/: lib.rs
sugarcubes-core/src/automata/: automaton.rs  mod.rs  simulate_automaton.rs  state.rs  transition.rs  transition_set.rs
sugarcubes-core/src/automata/finite_automaton/: finite_automaton_configuration.rs  finite_automaton_transition.rs  mod.rs
sugarcubes/src/: command.rs  document_command.rs  main.rs  states.rs  top_panel.rs  top_panel_command_handler.rs  transitions.rs
sugarcubes/src/top_panel/: context_menu.rs  fast_run.rs  input_window.rs  left_panel.rs  menu_bar.rs  mod.rs  set_name.rs  simulate_input_window.rs  simulation_toolbar.rs
