[package]
name = "sugarcubes"
version = "0.1.0"
authors = ["Henry Sloan <henryksloan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sugarcubes-core = { path = "../sugarcubes-core" }
egui = "0.12.0"
egui-macroquad = "0.4.0"
macroquad = "0.3"
glam = "0.14"
